<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
public function up(): void
{
    Schema::create('settings', function (Blueprint $table) {
        $table->id();

        $table->string('key', 100)
            ->unique();

        $table->text('value')
            ->nullable();

        $table->timestamp('updated_at');
    });
}

public function down(): void
{
    Schema::dropIfExists('settings');
}
};
